--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HexSchool</title>
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
     <header>
@@ -130,5 +131,4 @@
     </footer>
 
 </body>
-<link rel="stylesheet" href="./CSS/style.css">
 </html>
