--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </header>
         </div>
         <main>
-            <div>
+            <div class="title-background">
                 <!-- 加上background-image -->
-                <h1 class="title-background">六角學院<br>讓您奠定良好的前端基礎</h1>
+                <h1>六角學院<br>讓您奠定良好的前端基礎</h1>
             </div>
             <!-- 3個Icon區域 -->
             <div class="main-section">
@@ -113,12 +113,12 @@
                     <h4 class="title-survey">對我們課程有興趣嗎？<br>歡迎留下您的資料</h4>
                     <div class="survey-area">
                     <div class="info">
-                        <label for="">姓名</label>
-                        <input type="text" name="" id="" placeholder="六角講師">
-                        <label for="">電話</label>
-                        <input type="number" name="" id="" placeholder="0987654321">
-                        <label for="">信箱</label>
-                        <input type="email" name="" id="" placeholder="example@hexschool.com">
+                        <label for="name">姓名</label>
+                        <input type="text" name="name" id="name" placeholder="六角講師">
+                        <label for="phone">電話</label>
+                        <input type="tel" name="phone" id="phone" placeholder="0987654321">
+                        <label for="email">信箱</label>
+                        <input type="email" name="email" id="email" placeholder="example@hexschool.com">
                     </div>
                     <div class="text-area">
                         <label for="">備註</label>
